--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 	</div>
 	<section id="hero">
 			<div class="hero-block">
-				<img class="img-circle" src="assets/img/uj.png" width="200" height="200" class="mb-7 hero-image">
+				<a href="http://www.sn0v.com">
+                    <img class="img-circle" src="assets/img/uj.png" width="200" height="200" class="mb-7 hero-image">
+                </a>
 				<p class="about-me">
                     Hi, my name is Utkarsh Jaiswal.<br/>
     				I'm a full stack developer who occasionally (re)designs UIs for fun.<br/>
@@ -52,7 +54,10 @@
 	<section id="networks">
 		<div class="container">
 			<p>
-				<a href="#"><i class="dribbble fa fa-dribbble"></i></a><a href="#"><i class="facebook fa fa-facebook"></i></a><a href="#"><i class="twitter fa fa-twitter"></i></a><a href="#"><i class="mail fa fa-envelope"></i></a>
+				<a href="assets/Utkarsh-Jaiswal-resume.pdf" title="Resume"><i class="resume fa fa-file"></i></a>
+                <a href="https://www.linkedin.com/in/ujaiswal" title="LinkedIn"><i class="linkedin fa fa-linkedin"></i></a>
+                <a href="https://github.com/sn0v" title="GitHub"><i class="github fa fa-github"></i>
+                </a><a href="mailto:uj@sn0v.com" title="Email"><i class="mail fa fa-envelope"></i></a>
 			</p>
 
 		</div>
