--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     Hit me up if you'd like to chat!
                 </p>
 			</div>
-		<a href="index.html#work" class="scroll"><span class="down-arrow"></span></a>
+		<a href="index.html#networks" class="scroll"><span class="down-arrow"></span></a>
 	</section>
 
 
