Updated assets + links

--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -38,8 +32,8 @@
                 </a>
 				<p class="about-me">
                     Hi, my name is Utkarsh Jaiswal.<br/>
-    				I'm a full stack developer who occasionally (re)designs UIs for fun.<br/>
-    				I'm proficient in Java, and enjoy working with JavaScript and Python.<br/>
+    				I'm a full stack developer with a preference for the front-end who occasionally (re)designs UIs for fun.<br/>
+    				I'm proficient in JavaScript, and have previously worked with Java and Python.<br/>
                     In another lifetime, I used to work with C, C++, CUDA and other low level languages.<br/><br/><br/>
                     Hit me up if you'd like to chat!
                 </p>
@@ -59,7 +53,7 @@
 				<a href="assets/Utkarsh-Jaiswal-resume.pdf" title="Resume"><i class="resume fa fa-file"></i></a>
                 <a href="https://www.linkedin.com/in/ujaiswal" title="LinkedIn"><i class="linkedin fa fa-linkedin"></i></a>
                 <a href="https://github.com/sn0v" title="GitHub"><i class="github fa fa-github"></i>
-                </a><a href="mailto:uj@sn0v.com" title="Email"><i class="mail fa fa-envelope"></i></a>
+                </a><a href="mailto:utkarshjaiswal91@gmail.com" title="Email"><i class="mail fa fa-envelope"></i></a>
 			</p>
 
 		</div>
