Removed unnecessary assets, cleaned up site

--- a/index.html
+++ b/index.html
@@ -1,73 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-
-    <title>sn0v</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-  </head>
-
-  <body>
-
-
-	<div class="nav">
-		<a href="index.html#hero" class="scroll">section one</a>
-		<a href="index.html#networks" class="scroll">section two</a>
-	</div>
-	<section id="hero">
-			<div class="hero-block">
-				<a href="http://www.sn0v.com">
-                    <img class="img-circle" src="assets/img/uj.png" width="200" height="200" class="mb-7 hero-image">
-                </a>
-				<p class="about-me">
-                    Hi, my name is Utkarsh Jaiswal.<br/>
-    				I'm a full stack developer with a preference for the front-end who occasionally (re)designs UIs for fun.<br/>
-    				I'm proficient in JavaScript, and have previously worked with Java and Python.<br/>
-                    In another lifetime, I used to work with C, C++, CUDA and other low level languages.<br/><br/><br/>
-                    Hit me up if you'd like to chat!
-                </p>
-			</div>
-		<a href="index.html#networks" class="scroll"><span class="down-arrow">
-            <img src="assets/img/arrow.png" width="25px" height="19px">
-        </span></a>
-	</section>
-
-
-
-
-
-	<section id="networks">
-		<div class="container">
-			<p>
-				<a href="assets/Utkarsh-Jaiswal-resume.pdf" title="Resume"><i class="resume fa fa-file"></i></a>
-                <a href="https://www.linkedin.com/in/ujaiswal" title="LinkedIn"><i class="linkedin fa fa-linkedin"></i></a>
-                <a href="https://github.com/sn0v" title="GitHub"><i class="github fa fa-github"></i>
-                </a><a href="mailto:utkarshjaiswal91@gmail.com" title="Email"><i class="mail fa fa-envelope"></i></a>
-			</p>
-
-		</div>
-
-	</section>
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jribbble.js"></script>
-    <script src="assets/js/site-ck.js"></script>
-
-  </body>
+<html lang='en'>
+<head>
+    <link rel='icon' href='assets/img/uj.png'>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
+    <link rel='stylesheet' href='assets/css/main.css'>
+</head>
+<body>
+    <div class='page'>
+        <div class='header'>
+            <!-- <img src='assets/img/uj.png' height='100' width='100'/> -->
+            Utkarsh Jaiswal
+        </div>
+        <div class='body'>
+            I'm a full stack developer with a preference for the front-end who occasionally designs UIs for fun.<br/>
+            I'm proficient in JavaScript, and have previously worked with Java and Python.<br/>
+            In another lifetime, I used to work with C, C++, CUDA and other low level languages.<br/><br/>
+            Hit me up if you'd like to chat!
+        </div>
+        <div class='footer'>
+            <a href='assets/Utkarsh-Jaiswal-resume.pdf'>resume</a>
+            |
+            <a href='https://www.linkedin.com/in/ujaiswal'>linkedin</a>
+            |
+            <a href='https://github.com/sn0v'>github</a>
+            |
+            <a href='mailto:utkarshjaiswal91@gmail.com'>email</a>
+        </div>
+    </div>
+</body>
 </html>
