Updated copy, resume, styles

--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 <body>
     <div class='page'>
         <div class='header'>
-            <!-- <img src='assets/img/uj.png' height='100' width='100'/> -->
             Utkarsh Jaiswal
         </div>
         <div class='body'>
-            I'm a full stack developer with a preference for the front-end who occasionally designs UIs for fun.<br/>
-            I'm proficient in JavaScript, and have previously worked with Java and Python.<br/>
-            In another lifetime, I used to work with C, C++, CUDA and other low level languages.<br/><br/>
-            Hit me up if you'd like to chat!
+            I'm a full stack web & mobile developer with 5+ years of experience in building, scaling and managing high-throughput systems from scratch.
+            I'm skilled at getting up to speed on new environments, triaging escalations and delivering impactful solutions.
+            I enjoy mentoring new developers, working with cross-functional teams and driving business value.
         </div>
         <div class='footer'>
             <a href='assets/Utkarsh-Jaiswal-resume.pdf'>resume</a>
